fix(TopBar): z-index conflicting with Transak provider

--- a/src/components/Wallet/TopBar/TopBar.scss
+++ b/src/components/Wallet/TopBar/TopBar.scss
@@ -1,7 +1,7 @@
 @import '../../../variables.scss';
 
 #topbar {
-    z-index: 99;
+    z-index: 50;
     height: 110px;
     position: fixed;
     top: 0;
